[package]
name = "airdrop-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.17.6"
bs58 = "0.5.0"
solana-client = "1.17.6"
solana-program = "1.17.6"
borsh = "1.0.0"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }